Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       <h1>
-<a id="sngjkygithubio" class="anchor" href="#sngjkygithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>sngjky.github.io</h1>
+<a id="snjgkygithubio" class="anchor" href="#snjgkygithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>snjgky.github.io</h1>
 
       <footer class="site-footer">
 
